# silverhand_ros2

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  hardware_profiles.yaml  initial_positions.yaml
include/silverhand_arm_control/: silverhand_arm_hardware.hpp
launch/: silverhand_arm_bringup.launch.py  silverhand_arm_real.launch.py  silverhand_arm_ros_control.launch.py
ros2_control/: silverhand.ros2_control.xacro
scripts/: start_arm_mock.sh  start_arm_real.sh
silverhand_arm_bringup/: CMakeLists.txt  package.xml
silverhand_arm_bringup/config/: controllers.yaml
silverhand_arm_bringup/launch/: silverhand_arm_bringup.launch.py
silverhand_arm_description/: CMakeLists.txt  package.xml
silverhand_arm_description/ros2_control/: silverhand.ros2_control.xacro
silverhand_arm_description/urdf/: silverhand.urdf  silverhand.urdf.xacro  silverhand_macro.urdf.xacro
silverhand_arm_hardware/: CMakeLists.txt  package.xml  silverhand_arm_hardware.xml
silverhand_arm_hardware/include/silverhand_arm_hardware/: joint_ports.hpp  silverhand_arm_hardware.hpp  visibility_control.h
silverhand_arm_hardware/src/: silverhand_arm_hardware.cpp
src/: silverhand_arm_hardware.cpp
systemd/user/: silverhand-arm-control@.service
urdf/: silverhand.urdf.xacro
